--- a/package.json
+++ b/package.json
@@ -35,16 +35,17 @@
     "data",
     "structure",
     "data structure",
-    "array",
     "typed",
+    "typed-array",
+    "vector",
     "dstructs"
   ],
   "bugs": {
     "url": "https://github.com/dstructs/array/issues"
   },
   "dependencies": {
-    "compute-array-constructors": "^1.0.0",
-    "compute-cast-arrays": "^1.0.0",
+    "dstructs-array-constructors": "^1.0.2",
+    "dstructs-cast-arrays": "^1.0.2",
     "validate.io-array-like": "^1.0.1",
     "validate.io-nonnegative-integer": "^1.0.0",
     "validate.io-number-primitive": "^1.0.0"
