--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "istanbul": "^0.3.0",
     "jshint": "2.x.x",
     "jshint-stylish": "2.x.x",
-    "mocha": "2.x.x"
+    "mocha": "2.x.x",
+    "proxyquire": "^1.7.3"
   },
   "license": "MIT"
 }
